# ai_meeting_room

./: .env.example  .gitignore  README.md  meeting_config.yaml  pyproject.toml
src/: __main__.py  app.py  app.tcss  config.py  conversation_storage.py  main_menu.py  meeting_settings.py  model_manager.py  model_settings.py  models.py  moderator.py  notes.py  poe_client.py  prompts.py  setup.py  setup_participants.py  splash.py  ui_helpers.py  utils.py
